# src/main/kotlin/jp/hiro72/controller/form/NiceForm.kt
@@ -1,0 +1,6 @@
+package jp.hiro72.controller.form
+
+data class NiceForm(
+    val actressId: Int,
+    val userId: String
+)
