# src/main/kotlin/jp/hiro72/entity/NiceEntity.kt
@@ -1,0 +1,6 @@
+package jp.hiro72.entity
+
+data class NiceEntity(
+    val actressId: Int,
+    val niceCnt: Int
+)
